--- a/main.ipynb
+++ b/main.ipynb
@@ -20,6 +20,7 @@
     "from pathlib import Path\n",
     "from unidecode import unidecode\n",
     "from networkx.drawing.nx_pydot import graphviz_layout\n",
+    "from matplotlib import cm\n",
     "\n",
     "prefix = 'data/umimematikucz-system_'\n",
     "\n",
@@ -28,23 +29,26 @@
     "#ps = pd.read_csv(Path(prefix + \"ps.csv\", ), sep=';', header=0, index_col=0)\n",
     "\n",
     "SIZE = (100, 100)\n",
-    "def recursively_change_shape(node, shape):\n",
-    "    nx.set_node_attributes(G, {node:shape}, name='shape')\n",
+    "def recursively_change_shape_and_color(node, shape, color):\n",
+    "    nx.set_node_attributes(G, {node:shape}, name='base_shape')\n",
+    "    nx.set_node_attributes(G, {node:color}, name='base_color')\n",
     "    for pred in G.predecessors(node):\n",
-    "        recursively_change_shape(pred, shape)\n",
+    "        recursively_change_shape_and_color(pred, shape, color)\n",
     "\n",
-    "shapes = ['diamond', 'triangle', 'rectangle', 'ellipse', 'octagon', 'v', 'hexagon', 'parallelogram', 'round-rectangle']\n",
+    "shapes = ['ellipse', 'round-triangle', 'round-rectangle', 'diamond', 'round-diamond', 'round-pentagon',\n",
+    "          'round-hexagon', 'round-heptagon', 'round-octagon', 'vee']\n",
+    "colors = ['cadetblue', 'coral', 'seagreen', 'salmon', 'tomato', 'olive', 'khaki', 'navy', 'skyblue', 'teal', 'aqua']\n",
     "G = nx.DiGraph(size=SIZE)\n",
     "\n",
-    "G.add_node(0, label='\"Root\"', color='black', shape='ellipse')\n",
-    "G.add_nodes_from([(int(idx), {'label':f'\"{unidecode(name)}\"', 'color': 'black', 'shape':'ellipse'}) for idx, name in zip(kc.index, kc['name'])])\n",
-    "G.add_edges_from([(int(idx), int(parent)) for idx, parent in zip(kc.index, kc['parent'])], color='black')\n",
+    "G.add_node(0, label='\"Root\"', base_shape='ellipse', base_color='rgb(50, 50, 50)', selected='False')\n",
+    "G.add_nodes_from([(int(idx), {'label':f'\"{unidecode(name)}\"', 'selected':'False'}) for idx, name in zip(kc.index, kc['name'])])\n",
+    "G.add_edges_from([(int(idx), int(parent)) for idx, parent in zip(kc.index, kc['parent'])], color='dimgray')\n",
     "\n",
-    "for idx, shape in zip(G.predecessors(0), shapes):\n",
-    "    recursively_change_shape(idx, shape)\n",
+    "for idx, shape, color in zip(G.predecessors(0), shapes, colors):\n",
+    "    recursively_change_shape_and_color(idx, shape, color)\n",
     "\n",
     "G.add_edges_from([(int(first), int(second)) for first, second in follow[['kc1', 'kc2']].to_numpy()], color='silver')\n",
-    "pos = graphviz_layout(G, prog=\"dot\")"
+    "pos = nx.nx_agraph.pygraphviz_layout(G, prog=\"dot\")"
    ]
   },
   {
@@ -175,8 +179,8 @@
     "cyto.load_extra_layouts()\n",
     "layouts = {\n",
     "    'GVdot': {'call': lambda G: (nx.nx_agraph.pygraphviz_layout(G, prog='dot'), {'name': 'preset'}), 'scale_x':1, 'scale_y':1},\n",
-    "    'CytoKlay': {'call': lambda G: (None, {'name': 'klay'}), 'scale_x':1, 'scale_y':1},  # TODO figure out how to pass edge weights to engine\n",
-    "    'GVtwopi': {'call': lambda G: (nx.nx_agraph.pygraphviz_layout(G, prog='twopi'), {'name': 'preset'}), 'scale_x':1, 'scale_y':1},\n",
+    "    'CytoKlay': {'call': lambda G: (None, {'name': 'klay'}), 'scale_x':1, 'scale_y':0.5},  # TODO figure out how to pass edge weights to engine\n",
+    "    'GVtwopi': {'call': lambda G: (nx.nx_agraph.pygraphviz_layout(G, prog='twopi'), {'name': 'preset'}), 'scale_x':10, 'scale_y':5},\n",
     "    # TODO breadthfirst with multiple roots\n",
     "    # TODO graphviz experiment with layouts and scales\n",
     "}\n",
@@ -240,8 +244,8 @@
     "    return g.graph_as_elements(\n",
     "        graph,\n",
     "        position,\n",
-    "        x_scale if x_scale is not None else layouts[layout]['scale_x'],\n",
-    "        y_scale if y_scale is not None else layouts[layout]['scale_y']\n",
+    "        x_scale * layouts[layout]['scale_x'] if x_scale is not None else layouts[layout]['scale_x'],\n",
+    "        y_scale * layouts[layout]['scale_y'] if y_scale is not None else layouts[layout]['scale_y']\n",
     "    ), cyto_layout\n",
     "\n",
     "@app.callback(\n",
@@ -271,13 +275,13 @@
     "            if g.is_element_edge(elements[i]):\n",
     "                continue\n",
     "            elif any(elements[i]['data']['id'] == s['id'] for s in selected):\n",
-    "                elements[i]['data']['color'] = 'red'\n",
+    "                elements[i]['data']['selected'] = 'True'\n",
     "            elif any(g.graph_index_from_elements(elements[i]) in graph.successors(g.graph_index_from_elements(s)) for s in selected):\n",
-    "                elements[i]['data']['color'] = 'orange'\n",
+    "                elements[i]['data']['selected'] = 'Parent'\n",
     "            elif any(g.graph_index_from_elements(elements[i]) in graph.predecessors(g.graph_index_from_elements(s)) for s in selected):\n",
-    "                elements[i]['data']['color'] = 'yellow'\n",
+    "                elements[i]['data']['selected'] = 'Child'\n",
     "            else:\n",
-    "                elements[i]['data']['color'] = 'black'\n",
+    "                elements[i]['data']['selected'] = 'False'\n",
     "\n",
     "        # add edge\n",
     "        if mode == 1 and len(selected) >= 2:\n",
