--- a/main.ipynb
+++ b/main.ipynb
@@ -42,12 +42,12 @@
     "\n",
     "G.add_node(0, label='\"Root\"', base_shape='ellipse', base_color='rgb(50, 50, 50)', selected='False')\n",
     "G.add_nodes_from([(int(idx), {'label':f'\"{unidecode(name)}\"', 'selected':'False'}) for idx, name in zip(kc.index, kc['name'])])\n",
-    "G.add_edges_from([(int(idx), int(parent)) for idx, parent in zip(kc.index, kc['parent'])], color='dimgray')\n",
+    "G.add_edges_from([(int(idx), int(parent)) for idx, parent in zip(kc.index, kc['parent'])], type='kc', updated='False')\n",
     "\n",
     "for idx, shape, color in zip(G.predecessors(0), shapes, colors):\n",
     "    recursively_change_shape_and_color(idx, shape, color)\n",
     "\n",
-    "G.add_edges_from([(int(first), int(second)) for first, second in follow[['kc1', 'kc2']].to_numpy()], color='silver')\n",
+    "G.add_edges_from([(int(first), int(second)) for first, second in follow[['kc1', 'kc2']].to_numpy()], type='ps', updated='False')\n",
     "pos = nx.nx_agraph.pygraphviz_layout(G, prog=\"dot\")"
    ]
   },
@@ -97,7 +97,7 @@
     "        labelClassName=\"btn btn-outline-primary\",\n",
     "        labelCheckedClassName=\"active\",\n",
     "        options=[\n",
-    "            {\"label\": name, \"value\": val} for val, name in enumerate(['Explore', 'Add/Remove edges', 'TBD'])\n",
+    "            {\"label\": name, \"value\": val} for val, name in enumerate(['Explore', 'Edit KC Edge', 'Edit PS Edge'])\n",
     "        ],\n",
     "        value=0\n",
     "    )\n",
@@ -175,6 +175,8 @@
     "\n",
     "styles = json.load(open('styles.json', 'r'))\n",
     "\n",
+    "edge_types = {1:'kc', 2:'ps'}\n",
+    "\n",
     "# GV layouts: 'dot', 'fdp', 'twopi', 'circo', 'sfdp'\n",
     "cyto.load_extra_layouts()\n",
     "layouts = {\n",
@@ -217,13 +219,19 @@
     "\n",
     "@app.callback(\n",
     "    Output('download', 'data'),\n",
-    "    Input('graph_elems', 'data'),\n",
+    "    Input('cytoscape', 'elements'),\n",
     "    Input('download_btn', 'n_clicks'),\n",
     "    prevent_initial_call=True,\n",
     ")\n",
-    "def download_graph(data, _):\n",
+    "def download_graph(elements, _):\n",
+    "    elements = [\n",
+    "        elem for elem in elements if ('updated' not in elem['data']) or (elem['data']['updated'] != 'Removed')\n",
+    "    ]\n",
+    "    for i in range(len(elements)):\n",
+    "        if 'updated' in elements[i]['data']:\n",
+    "            elements[i]['data']['updated'] = 'False'\n",
     "    if ctx.triggered_id == 'download_btn':\n",
-    "        return dcc.send_string(json.dumps(data), filename='updated_graph.json')\n",
+    "        return dcc.send_string(json.dumps(elements), filename='updated_graph.json')\n",
     "    raise PreventUpdate\n",
     "\n",
     "\n",
@@ -247,6 +255,36 @@
     "        x_scale * layouts[layout]['scale_x'] if x_scale is not None else layouts[layout]['scale_x'],\n",
     "        y_scale * layouts[layout]['scale_y'] if y_scale is not None else layouts[layout]['scale_y']\n",
     "    ), cyto_layout\n",
+    "\n",
+    "\n",
+    "def is_this_edge(elem, source, target, edge_type):\n",
+    "    return g.is_element_edge(elem) and \\\n",
+    "        elem['data']['source'] == g.garph_index_to_elements(source) and \\\n",
+    "        elem['data']['target'] == g.garph_index_to_elements(target) and \\\n",
+    "        elem['data']['type'] == edge_type\n",
+    "\n",
+    "\n",
+    "def update_edge(elems, source, target, mode):\n",
+    "    edge_type = edge_types[mode]\n",
+    "    for i in range(len(elems)):\n",
+    "        if is_this_edge(elems[i], source, target, edge_type):\n",
+    "            if elems[i]['data']['updated'] == 'False':\n",
+    "                elems[i]['data']['updated'] = 'Removed'\n",
+    "                return elems\n",
+    "            elif elems[i]['data']['updated'] == 'Added':\n",
+    "                elems.pop(i)\n",
+    "                return elems\n",
+    "            elif elems[i]['data']['updated'] == 'Removed':\n",
+    "                elems[i]['data']['updated'] = 'False'\n",
+    "                return elems\n",
+    "    elems.append(\n",
+    "        g.graph_edge_as_elements(\n",
+    "            source,\n",
+    "            target,\n",
+    "            {'type':edge_type, 'updated': 'Added'}\n",
+    "        )\n",
+    "    )\n",
+    "    return elems\n",
     "\n",
     "@app.callback(\n",
     "        [\n",
@@ -284,13 +322,13 @@
     "                elements[i]['data']['selected'] = 'False'\n",
     "\n",
     "        # add edge\n",
-    "        if mode == 1 and len(selected) >= 2:\n",
-    "            edge = g.graph_edge_as_elements(g.graph_index_from_elements(selected[-2]), g.graph_index_from_elements(selected[-1]), {'color':'blue'})\n",
-    "            old_length = len(elements)\n",
-    "            elements = g.filter_edge_from_elements(edge, elements)\n",
-    "            if len(elements) == old_length:\n",
-    "                elements.append(edge)\n",
-    "            \n",
+    "        if mode >= 1 and len(selected) >= 2:\n",
+    "            elements = update_edge(\n",
+    "                elements,\n",
+    "                g.graph_index_from_elements(selected[-2]),\n",
+    "                g.graph_index_from_elements(selected[-1]),\n",
+    "                mode\n",
+    "            )\n",
     "        return elements, prev_layout\n",
     "\n",
     "    raise PreventUpdate\n"
